--- a/style.css
+++ b/style.css
@@ -1,49 +1,61 @@
 body{
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-header{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+ }
+ header{
+     background-color: rgba( 60, 120, 160, 0.9);
+     height: 100px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     color: aliceblue;
+     font-size: 150%;
+ }
+ main{
+     margin-top: 10px;
+     display: flex;
+ }
+ #left{
+     background-color: rgba(0, 100, 0, 0.6);
+     width: 75%;
+     margin: 2%;
+     height: 600px;
+     overflow-y: scroll;
+     font-size: 120%;
+     box-shadow: 10px 10px 7px dimgray;
+ }
+ .div1{
+     background-color: rgba(0, 100, 0, 0.6);
+     height: 300px;
+     width: 300px;
+     margin: 1%;
+     box-shadow: 10px 10px 7px dimgray;
+     margin-top: 20px;
+ }
+ #right{
+     display: flex;
+     flex-direction: column;
+ }
+ img{
+     z-index: -1;
+     position: absolute;
+     float: left;
+     background-attachment: fixed;
+     margin-left: 15%;
+     width: 70%;
+  
+ }
+ p{
+     font-size: 20px;
+ }
+ #stopka{
+    display: flex;
+    height: 80px;
+    margin: 10px;
     background-color: rgba( 60, 120, 160, 0.9);
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: aliceblue;
-    font-size: 150%;
-}
-main{
-    margin-top: 10px;
-    display: flex;
-}
-#left{
-    background-color: rgba(0, 100, 0, 0.6);
-    width: 75%;
-    margin: 2%;
-    height: 600px;
-    overflow-y: scroll;
-    font-size: 120%;
-    box-shadow: 10px 10px 7px dimgray;
-}
-.div1{
-    background-color: rgba(0, 100, 0, 0.6);
-    height: 300px;
-    width: 300px;
-    margin: 1%;
-    box-shadow: 10px 10px 7px dimgray;
-    margin-top: 20px;
-}
-#right{
-    display: flex;
-    flex-direction: column;
-}
-img{
-    z-index: -1;
-    position: absolute;
-    float: left;
-    background-attachment: fixed;
-    margin-left: 15%;
-    width: 70%;
- 
-}
-p{
-    font-size: 20px;
-}
+    font-size: 100%;
+    align-items: center;
+ }
+ #text{
+    background-color: rgba(93, 250, 93, 0.911);
+ }
